--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,6 @@
 header {
    margin: 0 auto;
    color: white;
-   height: 4rem;
    width: 100%;
    text-align: center;
 }
