--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 body {
-   font-family: 'Open Sans', sans-serif;
+   font-family: 'Old Standard TT', serif;
 }
 
 h1, h2, h3, h4 {
-   font-family: 'Oswald', sans-serif;
+  font-family: 'Old Standard TT', serif;
 }
 
 a {
